--- a/portainer-compose.yml
+++ b/portainer-compose.yml
@@ -1,12 +1,29 @@
 version: '3.8'
 services:
 
-  # Building and testing environment
-  app:
-    image: ghcr.io/growlf/toolbox:testing
+  # Development Environment Container
+  dev:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    image: ghcr.io/growlf/toolbox:latest
+    environment:
+      TESTVAR: ${TESTVAR:-/src}
     stdin_open: true
     tty: true
     command: ["/bin/zsh"]
     volumes:
+      - ${HOME}/.gitconfig:/home/ubuntu/.gitconfig
+      - ${HOME}/.ssh:/home/ubuntu/.ssh
+      - .:/src
       - /var/run/docker.sock:/var/run/docker.sock
     network_mode: "host"
+
+  # Alternate Container Example
+  app2:
+    image: ghcr.io/growlf/toolbox:latest
+    environment:
+      TESTVAR: ${TESTVAR:-/src}
+    stdin_open: true
+    tty: true
+    command: ["/bin/bash"]
